# swift

./: CMakeLists.txt
cmake/modules/: SwiftComponents.cmake
docs/proposals/: RuntimeValueWitness.rst
include/: CMakeLists.txt
include/swift/ABI/: Metadata.h
include/swift/AST/: IRGenOptions.h
include/swift/Option/: FrontendOptions.td
include/swift/Runtime/: RuntimeFunctions.def
lib/: CMakeLists.txt
lib/Driver/: DarwinToolChains.cpp
lib/Frontend/: CompilerInvocation.cpp
lib/IRGen/: GenArchetype.cpp  GenClass.cpp  GenConcurrency.cpp  GenDecl.cpp  GenDiffFunc.cpp  GenEnum.cpp  GenExistential.cpp  GenFunc.cpp  GenHeap.cpp  GenMeta.cpp  GenStruct.cpp  GenTuple.cpp  GenType.cpp  GenValueWitness.cpp  HeapTypeInfo.h  TypeLayout.cpp  TypeLayout.h
stdlib/: CMakeLists.txt
stdlib/public/runtime/: CMakeLists.txt  RuntimeValueWitness.cpp  RuntimeValueWitness.h
test/: lit.cfg
test/Driver/: actions-dsym.swift
test/IRGen/: lit.local.cfg  typelayout_based_value_witness.swift
test/Profiler/: coverage_smoke.swift  pgo_checked_cast.swift  pgo_foreach.swift  pgo_guard.swift  pgo_if.swift  pgo_repeatwhile.swift  pgo_switchenum.swift  pgo_while.swift
test/Runtime/: runtime_value_witness.swift
test/SILOptimizer/: pgo_si_inlinelarge.swift  pgo_si_reduce.swift
tools/SourceKit/: CMakeLists.txt
tools/swift-reflection-test/: swift-reflection-test.c
unittests/Pika/lto-linker-issue/: FBComposerLiteExtensionController.h  FBComposerLiteExtensionController.mm  FBComposerLiteRootViewController.swift  FBComposerLiteUIRootSwiftPlugin.m  (+6 more)
utils/: analyze_code_size.py
(+11 files in other folders)
